# insee

./: CMakeLists.txt  Makefile  arbitrate.c  cam.c  cam.h  circ_pk.c  constants.h  data_generation.c  dragonfly.c  event.c  event.h  exd.c  fattree.c  fsin.conf  get_conf.c  globals.h  graph.c  graph.h  icube.c  init_functions.c  ksp_routing.c  ksp_routing.h  list.c  list.h  main.c  mapping.c  mapping.h  midimew.c  misc.c  misc.h  mpa.c  packet.h  pattern.c  pattern.h  perform_mov.c  pkt_mem.c  print_results.c  request_ports.c  router.c  router.h  (+5 more)
apps/: apps
apps/apps2/: app1.apx  app2.apx  app3.apx  trace1024.trc  trace2048.trc  trace256.trc  trace4096.trc  trace512.trc
apps/tracefiles (all2all)/: trace-128n.trc  trace-16n.trc  trace-256n.trc  trace-2n.trc  trace-32n.trc  trace-64n.trc  trace-8n.trc
insee-master/: fsin.conf
kk/: fsin.conf
tools/pseudo-apps/: alltoall.c  alltoone.c  alog.c  alog.h  binaryTree.c  butterfly.c  compile_pseudoapp  dimemas.c  dimemas.h  event.c  event.h  gups.c  mesh2.c  mesh3.c  nbodies.c  onetoall.c  rmesh2.c  rnd.c  rsweep2.c  rtorus2.c  rtorus3.c  rwf.c  sweep2.c  sweep3.c  torus2.c  torus3.c  trc.c  waterfall.c
tools/rg-gen/: df-gen.c  ex1.top  ex100-32-16-1.top  ex100-32-31-1.top  ex1000-16-12-1.top  ex2.top  ex4.top  ex400-4-3-1.top  ex4000-4-3-1.top  rg_gen  rg_gen.c
tools/topo-gen/: 100-4-3-1.lst  100-4-3-2.lst  100-5-3-2.lst  100-5-4-1.lst  df-gen  df-gen.c  df-helix-6-12-6  df-naut-6-12-6  ex16-4-2-1.top  ex2-1000-7-3-1.top  ex3.top  ex50-16-8-1.top  ex50-4-3.top  fsin.conf  jf-100-24-16-1.lst  jf-100-6-5-1.lst  m_rg_gen  (+16 more)
